Populating & Rendering The First View

--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -5,6 +5,51 @@
   <main>
     <h1>Create New Account</h1>
     <form action="" method="">
+      <p>
+        <label for="email">Email</label>
+        <input
+          type="email" id="email" name="email"
+          required />
+      </p>
+      <p>
+        <label for="confirm-email">Confirm Email</label>
+        <input
+          type="email" id="confirm-email" name="confirm-email"
+          required />
+      </p>
+      <p>
+        <label for="password">Confirm Email</label>
+        <input
+          type="password" id="password" name="password"
+          required minlength="6" />
+      </p>
+      <hr />
+      <p>
+        <label for="fullname">Full Name</label>
+        <input
+          type="text" id="fullname" name="fullname"
+          required />
+      </p>
+      <p>
+        <label for="street">Street</label>
+        <input
+          type="text" id="street" name="street"
+          required />
+      </p>
+      <p>
+        <label for="postal">Postal Code</label>
+        <input
+          type="text" id="postal" name="postal"
+          required minlength="4" />
+      </p>
+      <p>
+        <label for="city">City</label>
+        <input
+          type="text" id="city" name="city"
+          required />
+      </p>
+      <button class="btn">Create Account</button>
+      <p id="switch-form"><a href="/login">Login instead</a></p>
     </form>
   </main>
 <%- include('../includes/footer') %>
