--- a/views/customer/includes/head.ejs
+++ b/views/customer/includes/head.ejs
@@ -6,3 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%= pageTitle %></title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="/styles/base.css" />
