Adding A MySQL  Database Server & Connection

--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,7 +6,7 @@
   <%- include('../includes/header') %>
   <main>
     <h1>Create New Account</h1>
-    <form action="" method="">
+    <form action="/auth/signup" method="POST">
       <p>
         <label for="email">Email</label>
         <input
