--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -16,11 +16,11 @@
       <p>
         <label for="confirm-email">Confirm Email</label>
         <input
-          type="email" id="confirm-email" name="confirm-email"
+          type="email" id="confirm-email" name="confirmEmail"
           required />
       </p>
       <p>
-        <label for="password">Confirm Email</label>
+        <label for="password">Password</label>
         <input
           type="password" id="password" name="password"
           required minlength="6" />
@@ -51,7 +51,7 @@
           required />
       </p>
       <button class="btn">Create Account</button>
-      <p id="switch-form"><a href="/login">Login instead</a></p>
+      <p id="switch-form"><a href="/auth/login">Login instead</a></p>
     </form>
   </main>
 <%- include('../includes/footer') %>
