--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -1,9 +1,9 @@
-<%- include('../includes/head', { pageTitle: 'Login' }) %>
+<%- include('../../shared/includes/head', { pageTitle: 'Login' }) %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <link rel="stylesheet" href="/styles/auth.css" />
 </head>
 <body>
-  <%- include('../includes/header') %>
+  <%- include('../../shared/includes/header') %>
   <main>
     <h1>Login</h1>
     <form action="/auth/login" method="POST">
@@ -26,5 +26,5 @@
       <p id="switch-form"><a href="/auth/signup">Create a new user</a></p>
     </form>
   </main>
-<%- include('../includes/footer') %>
+<%- include('../../shared/includes/footer') %>
  
