--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,9 +1,9 @@
-<%- include('../includes/head', { pageTitle: 'Signup' }) %>
+<%- include('../../shared/includes/head', { pageTitle: 'Signup' }) %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <link rel="stylesheet" href="/styles/auth.css" />
 </head>
 <body>
-  <%- include('../includes/header') %>
+  <%- include('../../shared/includes/header') %>
   <main>
     <h1>Create New Account</h1>
     <form action="/auth/signup" method="POST">
@@ -57,5 +57,5 @@
       <p id="switch-form"><a href="/auth/login">Login instead</a></p>
     </form>
   </main>
-<%- include('../includes/footer') %>
+<%- include('../../shared/includes/footer') %>
  
