Adding User Input Validation

--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -16,7 +16,7 @@
       <p>
         <label for="confirm-email">Confirm Email</label>
         <input
-          type="email" id="confirm-email" name="confirmEmail"
+          type="email" id="confirm-email" name="confirm-email"
           required />
       </p>
       <p>
