--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -6,17 +6,25 @@
   <%- include('../../shared/includes/header') %>
   <main>
     <h1>Login</h1>
+    <% if (inputData && inputData.errorMessage) { %>
+      <section class="alert">
+        <h2>Invalid Credentials</h2>
+        <p><%= inputData.errorMessage %></p>
+      </section>
+    <% } %>
     <form action="/auth/login" method="POST">
       <p>
         <label for="email">Email</label>
         <input
           type="email" id="email" name="email"
+          value="<%= inputData ? inputData.enteredData.email : '' %>"
           required />
       </p>
       <p>
         <label for="password">Password</label>
         <input
           type="password" id="password" name="password"
+          value="<%= inputData ? inputData.enteredData.password : '' %>"
           required minlength="6" />
       </p>
       <input
