--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,23 +6,32 @@
   <%- include('../../shared/includes/header') %>
   <main>
     <h1>Create New Account</h1>
+    <% if (inputData && inputData.errorMessage) { %>
+      <section class="alert">
+        <h2>Invalid Input</h2>
+        <p><%= inputData.errorMessage %></p>
+      </section>
+    <% } %>
     <form action="/auth/signup" method="POST">
       <p>
         <label for="email">Email</label>
         <input
           type="email" id="email" name="email"
+          value="<%= inputData ? inputData.enteredData.email : '' %>"
           required />
       </p>
       <p>
         <label for="confirm-email">Confirm Email</label>
         <input
           type="email" id="confirm-email" name="confirm-email"
+          value="<%= inputData ? inputData.enteredData.confirmedEmail : '' %>"
           required />
       </p>
       <p>
         <label for="password">Password</label>
         <input
           type="password" id="password" name="password"
+          value="<%= inputData ? inputData.enteredData.password : '' %>"
           required minlength="6" />
       </p>
       <hr />
@@ -30,24 +39,28 @@
         <label for="fullname">Full Name</label>
         <input
           type="text" id="fullname" name="fullname"
+          value="<%= inputData ? inputData.enteredData.fullname : '' %>"
           required />
       </p>
       <p>
         <label for="street">Street</label>
         <input
           type="text" id="street" name="street"
+          value="<%= inputData ? inputData.enteredData.street : '' %>"
           required />
       </p>
       <p>
         <label for="postal">Postal Code</label>
         <input
           type="text" id="postal" name="postal"
+          value="<%= inputData ? inputData.enteredData.postal : '' %>"
           required minlength="4" />
       </p>
       <p>
         <label for="city">City</label>
         <input
           type="text" id="city" name="city"
+          value="<%= inputData ? inputData.enteredData.city : '' %>"
           required />
       </p>
       <input
