--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -10,3 +10,4 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="/styles/base.css" />
+  <link rel="stylesheet" href="/styles/navigation.css">
