--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -1,32 +1,17 @@
-<header>
-  <div><a href="/">WDE</a></div>
+<header id="main-header">
+  <div id="logo"><a href="/">WDE</a></div>
   <nav>
-    <ul>
-      <% if (!locals.isAdmin) { %>
-        <li><a href="/">Shop</a></li>
-        <li><a href="/cart">Cart</a></li>
-      <% } %>
-      <% if (locals.isAuth && !locals.isAdmin) { %>
-        <li><a href="/orders"></a></li>
-      <% } %>
-      <% if (locals.isAdmin) { %>
-        <li><a href="/admin/products">Manage Products</a></li>
-        <li><a href="/admin/orders">Manage Orders</a></li>
-      <% } %>
-      <% if (!locals.isAuth) { %>
-        <li><a href="/auth/signup">Signup</a></li>
-        <li><a href="/auth/login">Login</a></li>
-      <% } %>
-      <% if (locals.isAuth) { %>
-        <li>
-          <form action="/auth/logout" method="POST">
-            <button>Logout</button>
-            <input
-              type="hidden" name="_csrf"
-              value="<%= locals.csrfToken %>" />
-          </form>
-        </li>       
-      <% } %>
-    </ul>
+    <%- include('nav-items') %>
   </nav>
+  <button id="mobile-menu-btn">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
 </header>
+
+<aside id="mobile-menu">
+  <nav>
+    <%- include('nav-items') %>
+  </nav>
+</aside>
