--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -1,4 +1,7 @@
 #main-header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   max-width: 60rem;
   height: 5rem;
@@ -8,7 +11,11 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--color-primary-500);
-  background-color: var(--color-grey-500);
+  background-color: var(--color-gray-500);
+}
+
+#main-header nav {
+  display: none;
 }
 
 #logo a {
@@ -34,11 +41,92 @@
   background-color: var(--color-gray-100);
 }
 
-.nav-items {
+#mobile-menu {
+  position: fixed;
+  top: 5rem;
+  left: 0;
+  height: calc(100vh - 5rem);
+  width: 100%;
+  background-color: var(--color-gray-700);
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#mobile-menu nav {
+  height: 20rem;
+  width: 90%;
+  margin: var(--space-4) 0;
+}
+
+#mobile-menu .nav-items a,
+#mobile-menu .nav-items button {
+  font-size: 1.75rem;
+  color: var(--color-primary-100);
+}
+
+.nav-items {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
 }
 
 .nav-items li {
   margin: 0 var(--space-2);
+}
+
+.nav-items button {
+  cursor: pointer;
+  font: inherit;
+  border: 1px solid var(--color-primary-100);
+  border-radius: var(--border-radius-small);
+  background-color: transparent;
+  padding: var(--space-2) var(--space-4);
+}
+
+main {
+  margin-top: 6rem;
+}
+
+@media (min-width: 48rem) {
+  #main-header {
+    position: static;
+  }
+
+  #main-header nav {
+    display: block;
+  }
+
+  #mobile-menu-btn {
+    display: none;
+  }
+
+  #mobile-menu {
+    display: none;
+  }
+
+  .nav-items {
+    flex-direction: row;
+  }
+
+  .nav-items a {
+    padding: var(--space-2) var(--space-4);
+    border-radius: var(--border-radius-small);
+  }
+
+  .nav-items a:hover,
+  .nav-items a:active {
+    background-color: var(--color-primary-500-bg);
+  }
+
+  .nav-items button {
+    color: var(--color-primary-500);
+    border-color: var(--color-primary-500);
+  }
+
+  main {
+    margin-top: 0;
+  }
 }
