--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -48,9 +48,13 @@
   height: calc(100vh - 5rem);
   width: 100%;
   background-color: var(--color-gray-700);
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
+}
+
+#mobile-menu.open {
+  display: flex;
 }
 
 #mobile-menu nav {
@@ -104,6 +108,10 @@ main {
   }
 
   #mobile-menu {
+    display: none;
+  }
+
+  #mobile-menu.open {
     display: none;
   }
 
