--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -11,3 +11,4 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="/styles/base.css" />
   <link rel="stylesheet" href="/styles/navigation.css">
+  <script src="/scripts/mobile.js" defer></script>
