--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -9,7 +9,13 @@
       <p><a class="btn" href="/admin/products/new">Add Product</a></p>
     </section>
     <section>
-      <p>A list of products...</p>
+      <ul>
+        <% for (const product of products) { %>
+          <li>
+            <%- include('includes/product-item', { product }) %>
+          </li>
+        <% } %>
+      </ul>
     </section>
   </main>
 <%- include('../../shared/includes/footer') %>
