--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,4 +1,5 @@
 <%- include('../../shared/includes/head', { pageTitle: 'All Products' }) %>
+  <link rel="stylesheet" href="/styles/products.css" />
 </head>
 <body>
   <%- include('../../shared/includes/header') %>
@@ -9,7 +10,7 @@
       <p><a class="btn" href="/admin/products/new">Add Product</a></p>
     </section>
     <section>
-      <ul>
+      <ul id="products-grid">
         <% for (const product of products) { %>
           <li>
             <%- include('includes/product-item', { product }) %>
