--- a/views/admin/products/update-product.ejs
+++ b/views/admin/products/update-product.ejs
@@ -1,14 +1,13 @@
-<%- include('../../shared/includes/head', { pageTitle: 'Add New Product' }) %>
+<%- include('../../shared/includes/head', { pageTitle: 'Update Product' }) %>
   <link rel="stylesheet" href="/styles/forms.css" />
 </head>
 <body>
   <%- include('../../shared/includes/header') %>
   <main>
-    <h1>Add New Product</h1>
+    <h1>Update Product</h1>
     <%- include('includes/product-form', {
-      submitUrl: '/admin/products',
-      product: undefined
-    }) %>
+      submitUrl: '/admin/products/' + product.id
+    }) %>  
   </main>
 <%- include('../../shared/includes/footer') %>
  
