Adding a "File Upload" Preview

--- a/views/admin/products/includes/product-form.ejs
+++ b/views/admin/products/includes/product-form.ejs
@@ -8,15 +8,18 @@
       value="<%= product ? product.title : '' %>"
       required />
   </p>
-  <p>
-    <label for="image">Image</label>
-    <input
-      type="file" id="image" name="image"
-      accept="image/png,image/jpg,image/jpeg"
-      <% if (!product || !product.imageUrl) { %>
-        required
-      <% } %> />
-  </p>
+  <div id="image-upload-control">
+    <p>
+      <label for="image">Image</label>
+      <input
+        type="file" id="image" name="image"
+        accept="image/png,image/jpg,image/jpeg"
+        <% if (!product || !product.imageUrl) { %>
+          required
+        <% } %> />
+      </p>
+      <img src="" alt="Selected image" />
+  </div>
   <p>
     <label for="summary">Summary</label>
     <input
