--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,3 +1,20 @@
+#image-upload-control {
+  display: flex;
+  align-items: center;
+}
+
+#image-upload-control input {
+  max-width: 15rem;
+}
+
+#image-upload-control img {
+  display: none;
+  width: 4rem;
+  height: 4rem;
+  object-fit: cover;
+  border-radius: var(--border-radius-small);
+}
+
 form hr {
   border-color: var(--color-primary-200);
   margin: var(--space-4);
