--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -1,10 +1,17 @@
 <%- include('../../shared/includes/head', { pageTitle: 'All Products' }) %>
+  <link rel="stylesheet" href="/styles/products.css" />
 </head>
 <body>
   <%- include('../../shared/includes/header') %>
   <main>
     <h1>All Products</h1>
-    <p>A list of products...</p>
+    <ul id="products-grid">
+      <% for(const product of products) { %>
+        <li>
+          <%- include('../../shared/includes/product-item', { product }) %>
+        </li>
+      <% } %>
+    </ul>
   </main>
 <%- include('../../shared/includes/footer') %>
  
