Working On The Shopping Cart Logic

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -102,6 +102,14 @@ a {
   text-transform: uppercase;
 }
 
-.alert h2 {
+.alert p {
   margin: var(--space-2) 0;
+}
+
+.badge {
+  margin-left: var(--space-2);
+  padding: 0.15rem var(--space-4);
+  border-radius: 10rem;
+  background-color: var(--color-primary-500);
+  color: var(--color-primary-500-contrast);
 }
