--- a/views/customer/products/product-details.ejs
+++ b/views/customer/products/product-details.ejs
@@ -1,5 +1,6 @@
-<%- include('../../shared/includes/head', { pageTitle: 'All Products' }) %>
+<%- include('../../shared/includes/head', { pageTitle: product.title }) %>
   <link rel="stylesheet" href="/styles/products.css" />
+  <script src="/scripts/cart-management.js" defer></script>
 </head>
 <body>
   <%- include('../../shared/includes/header') %>
@@ -9,7 +10,12 @@
       <div id="product-info">
         <h1><%= product.title %></h1>
         <p>$<%= product.price %></p>
-        <button class="btn">Add to Cart</button>
+        <button
+          class="btn"
+          data-productid="<%= product.id %>"
+          data-csrf="<%= locals.csrfToken %>">
+          Add to Cart
+        </button>
       </div>
     </header>
     <p id="product-description"><%= product.description %></p>
