Styling The Cart Page

--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -12,7 +12,7 @@
         </li>
       <% } %>
     </ul>
-    <div class="card-total">
+    <div id="card-total">
       <p>Total: $<%= locals.cart.totalPrice.toFixed(2) %></p>
       <button class="btn">Buy Items</button>
     </div>
