--- a/views/customer/cart/includes/cart-item.ejs
+++ b/views/customer/cart/includes/cart-item.ejs
@@ -12,7 +12,7 @@
     <input
       type="number"
       value="<%= item.quantity %>"
-      required />
+      min="0" required />
     <button class="btn btn-alt">Update</button>
   </div>
 </article>
