--- a/views/customer/cart/includes/cart-item.ejs
+++ b/views/customer/cart/includes/cart-item.ejs
@@ -8,11 +8,14 @@
       </span>
     </p>
   </div>
-  <div class="cart-item-management">
+  <form
+    class="cart-item-management"
+    data-productid="<%= item.product.id %>"
+    data-csrf="<%= locals.csrfToken %>">
     <input
       type="number"
       value="<%= item.quantity %>"
       min="0" required />
     <button class="btn btn-alt">Update</button>
-  </div>
+  </form>
 </article>
