--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -14,7 +14,7 @@
       <% } %>
     </ul>
     <div id="card-total">
-      <p>Total: $<%= locals.cart.totalPrice.toFixed(2) %></p>
+      <p>Total: <span id="cart-total-price">$<%= locals.cart.totalPrice.toFixed(2) %></span></p>
       <button class="btn">Buy Items</button>
     </div>
   </main>
