--- a/views/customer/cart/includes/cart-item.ejs
+++ b/views/customer/cart/includes/cart-item.ejs
@@ -2,7 +2,9 @@
   <div class="cart-item-info">
     <h2><%= item.product.title %></h2>
     <p>
-      $<%= item.totalPrice.toFixed(2) %> 
+      <span class="cart-item-price">
+        $<%= item.totalPrice.toFixed(2) %>
+      </span> 
       <span class="cart-product-price">
         ($<%= item.product.price.toFixed(2) %>)
       </span>
