--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -13,9 +13,18 @@
         </li>
       <% } %>
     </ul>
-    <div id="card-total">
+    <div id="cart-total">
       <p>Total: <span id="cart-total-price">$<%= locals.cart.totalPrice.toFixed(2) %></span></p>
-      <button class="btn">Buy Items</button>
+      <% if (locals.isAuth) { %>
+        <form action="/orders" method="POST">
+          <input
+            type="hidden" name="_csrf"
+            value="<%= locals.csrfToken %>" />
+          <button class="btn">Buy Items</button>
+        </form>
+      <% } else { %>
+        <p id="cart-total-fallback">Log in to proceed and purchase the items.</p>
+      <% } %>
     </div>
   </main>
 <%- include('../../shared/includes/footer') %>
