--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -15,7 +15,7 @@
     </ul>
     <div id="cart-total">
       <p>Total: <span id="cart-total-price">$<%= locals.cart.totalPrice.toFixed(2) %></span></p>
-      <% if (locals.isAuth) { %>
+      <% if (locals.isAuth && locals.cart.totalQuantity > 0) { %>
         <form action="/orders" method="POST">
           <input
             type="hidden" name="_csrf"
@@ -23,7 +23,7 @@
           <button class="btn">Buy Items</button>
         </form>
       <% } else { %>
-        <p id="cart-total-fallback">Log in to proceed and purchase the items.</p>
+        <p id="cart-total-fallback">Log in and add items to the cart to proceed and purchase the items.</p>
       <% } %>
     </div>
   </main>
